--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
-*{
+
+* {
     padding: 0;
     margin: 0;
 }
-nav{
+
+nav {
     background-color: #00203FFF;
     color: #ADEFD1FF;
     height: 65px;
@@ -13,9 +15,70 @@ nav{
     padding: 0 12px;
     font-family: "Reddit Mono", monospace;
     font-optical-sizing: auto;
-   
+
 }
-nav ul{
+
+nav ul {
     list-style-type: none;
 
+}
+
+.gameContainer {
+    
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: repeat(3, 10vw);
+    grid-template-columns: repeat(3, 10vw);
+    font-family: "Reddit Mono", monospace;
+    font-optical-sizing: auto;
+
+}
+
+/* .container div{
+    border: 1px solid black;
+    font-size: 8vw;
+} */
+
+.box {
+    border: 2px solid black;
+    font-size: 8vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.box:hover {
+    background-color: rgb(195, 205, 219);
+}
+
+.gameinfo {
+    padding: 0, 34px;
+}
+
+.imgbox {
+    display: none;
+}
+
+.br-0 {
+
+    border-right: 0;
+}
+
+.bl-0 {
+    border-left: 0;
+}
+
+.bb-0 {
+    border-bottom: 0;
+}
+
+.bt-0 {
+    border-top: 0;
 }
